# autoinstall-generator

./: .gitignore  MANIFEST.in  Makefile  README.md  setup.cfg  setup.py  snapcraft.yaml  tox.ini
.github/workflows/: python-package.yml
autoinstall-generator/: convert.py  merging.py
autoinstall-generator/tests/: test_answers.py  test_basic.py  test_merge.py  test_reader.py  test_yaml.py
autoinstall-generator/tests/data/: preseed.txt
autoinstall_generator/: __init__.py  convert.py  merging.py
autoinstall_generator/cmd/: autoinstall-generator.py
autoinstall_generator/cmd/tests/: test_invoke.py
autoinstall_generator/tests/: test_basic.py  test_merge.py  test_reader.py  test_util.py  test_yaml.py
autoinstall_generator/tests/data/: preseed.txt  preseed2autoinstall.yaml  preseed2autoinstall_debug.yaml  simple.txt
convert/: convert.py
convert/tests/: __init__.py  test_basic.py
preseed_to_answers/: convert.py
preseed_to_answers/tests/: test_basic.py
preseed_to_autoinstall/: convert.py
preseed_to_autoinstall/tests/: test_basic.py  test_reader.py  test_yaml.py
preseed_to_autoinstall/tests/data/: identity.yaml
scripts/: integration-test.sh
test/: example-preseed.txt  identity-no-hostname.cfg  lp-1926292-unicode.cfg
tests/: test_basic.py
