[metadata]
name = autoinstall_generator
version = 0.0.1
license = AGPL3+
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
author = Canonical Engineering
author_email = ubuntu-dev@lists.ubuntu.com

[options]
packages = autoinstall_generator
install_requires = pyyaml
