[metadata]
name = autoinstall_generator
license = AGPL3+
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
author = Canonical Engineering
author_email = ubuntu-dev@lists.ubuntu.com
version = attr: autoinstall_generator.__version__

[options]
packages = autoinstall_generator
install_requires =
    jsonschema
    pyyaml
scripts =
    autoinstall_generator/cmd/autoinstall-generator.py
